# minishell

./: .gitignore  CMakeLists.txt  Makefile
header/: minishell.h
libft/: Makefile  ft_arg_error.c  ft_atoi.c  ft_isdigit.c  ft_itoa.c  ft_strlen.c  libft.h
src/: create_and_fill_cmd_tab.c  dev_func.c  env_cmd.c  error_check.c  find_env_var.c  free_utils.c  get_env_var.c  handle_cmd_type.c  is_something.c  last_split.c  lst_cmd_utils.c  lst_create.c  lst_to_tab.c  lst_utils.c  main.c  minishell.c  new_token_utils.c  pars_env.c  print_utils.c  put_token.c  remove_quotes.c  set_env_var.c  set_heredoc.c  set_redir_file.c  set_redir_infile.c  set_redir_outfile.c  terminal.c  token_definition.c  token_utils.c  tokenization.c  utils.c  word_count.c
src/builtins/: cd.c  echo.c  env.c  exit.c  export.c  hub.c  pwd.c  unset.c
src/exec/: servo.c
